# 3D-Rasterizer

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
fonts/: Quicksand-LICENSE
lib/OBJ_Loader/: OBJ_Loader.h
src/: README.md  aabb.h  display.cpp  display.h  main.cpp  matrix4.cpp  matrix4.h  mesh.cpp  mesh.h  renderer.cpp  renderer.h  starfield.cpp  starfield.h  triangle.cpp  triangle.h  vector4.cpp  vector4.h  vertex.cpp  vertex.h
